# sawback_description

./: CMakeLists.txt  README.md  package.xml  sawback.rosinstall
config/: ridgeback_extras  ridgeback_sawyer.rviz  sawback.rviz  sawback_gazebo.rviz
launch/: ridgeback_gazebo.launch  ridgeback_sim.launch  sawback_environment.launch  sawback_world.launch  sawyer_gazebo.launch  sawyer_sim.launch  view_sawback.launch
src/: ridgeback_joint_plugin.cpp
urdf/: VLP-16.gazebo.xacro  bumblebee2.gazebo.xacro  nu_ridgeback.gazebo.xacro  nu_ridgeback.urdf.xacro  nu_ridgeback_extras.urdf.xacro  sawback.urdf  sawback.urdf.xacro
worlds/: basic.world
