<?xml version="1.0"?>
<package format="2">
  <name>sawback_description</name>
  <version>0.0.1</version>
  <description> Models of the ridgeback, sawyer, and sensors</description>

  <maintainer email="bostoncleek2020@u.northwestern.edu">bostoncleek</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
